--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ uvicorn==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
 typing-extensions==4.8.0
+boto3=1.40.40
 
 # Environment and configuration
 python-dotenv==1.0.0
