--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-multipart==0.0.6
 pydantic==2.5.0
 typing-extensions==4.8.0
 boto3==1.40.40
+psycopg2==2.9.10
 
 # Environment and configuration
 python-dotenv==1.0.0
