--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ anyio==3.7.1
 attrs==25.3.0
 boto3==1.40.40
 botocore==1.40.40
+build==1.3.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
@@ -41,11 +42,13 @@ openai==1.109.1
 orjson==3.11.3
 packaging==25.0
 Pillow==10.1.0
+pip-tools==7.5.0
 propcache==0.3.2
 psycopg2==2.9.10
 pydantic==2.11.9
 pydantic-settings==2.11.0
 pydantic_core==2.33.2
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -53,6 +56,7 @@ PyYAML==6.0.3
 requests==2.32.5
 requests-toolbelt==1.0.0
 s3transfer==0.14.0
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
@@ -65,5 +69,6 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
 uvicorn==0.24.0
+wheel==0.45.1
 yarl==1.20.1
 zstandard==0.25.0
